--- a/src/docs/asciidoc/road-to-immutability/050-e2immutable.adoc
+++ b/src/docs/asciidoc/road-to-immutability/050-e2immutable.adoc
@@ -721,11 +721,13 @@ Up to now, we have made no distinction between static fields and instance fields
 Inside a primary type, we will stick to this rule.
 In the following example, each call to `getK` increments a counter, which is a modifying operation because the type owns the counter:
 
-.Modifications on static fields are modifications
+.Example {counter:example}, modifications on static fields are modifications
 [source,java]
 ----
 @E1Container
 public class CountAccess<K> {
+
+    @NotModified
     private final K k;
 
     @Modified
@@ -750,11 +752,13 @@ public class CountAccess<K> {
 
 We can explicitly ignore modifications with the {ignoreModifications} annotation, which may make sense from a semantic point of view:
 
-.Modification on static field explicitly ignored
+.Example {counter:example}, modification on static field, explicitly ignored
 [source,java]
 ----
 @E2Container
 public class CountAccess<K> {
+
+    @NotModified
     private final K k;
 
     @IgnoreModifications
@@ -764,9 +768,9 @@ public class CountAccess<K> {
         this.k = k;
     }
 
-    @NotModified
+    @NotModified // <1>
     public K getK() {
-        counter.getAndIncrement();
+        counter.getAndIncrement(); // <1>
         return k;
     }
 
@@ -777,15 +781,16 @@ public class CountAccess<K> {
 }
 ----
 
-The next section, on <<value-based-classes>>, briefly explores these semantic differences.
+<1> The effects of the modifying method `getAndIncrement` are ignored.
 
 Note that when the modification takes place inside the constructor, it is still not ignored, because for static fields, static code blocks act as the constructor:
 
-.Modification takes place inside constructor
+.Example {counter:example}, modification of static field can occur inside constructor
 [source,java]
 ----
 @E1Container
 public class HasUniqueIdentifier<K> {
+
     public final K k;
     public final int identifier;
 
@@ -801,26 +806,33 @@ public class HasUniqueIdentifier<K> {
 
 Only modifications in a static code block are ignored:
 
+.Example {counter:example}, static code blocks are the constructors of static fields
 [source,java]
 ----
-
 public class CountAccess<K> {
     ...
     private static final AtomicInteger counter;
 
     static {
         counter = new AtomicInteger();
-        counter.getAndIncrement(); // this modification is ignored
+        counter.getAndIncrement(); // <1>
     }
     ...
 }
 ----
 
-When static modifying methods are called, on a field not belonging to the primary type or any of the parent types, or directly on a type expression which does not refer to any of the types in the primary type or parent types, we will make an exception to this rule, and classify the modification as a _static side effect_.
-This leads to consistency with the rules of level 2 immutable types, which only look at the fields and assume that when methods do not modify the fields, they are actually non-modifying.
+<1> Modification, part of the construction process.
 
+Nevertheless, we introduce the following rule which does distinguish between modifications on static and instance types:
+
+****
+When static modifying methods are called, on a field not belonging to the primary type or any of the parent types, or directly on a type expression which does not refer to any of the types in the primary type or parent types, we will make an exception to this rule, and classify the modification as a _static side effect_.
+****
+
+This is still consistent with the rules of level 2 immutable types, which only look at the fields and assume that when methods do not modify the fields, they are actually non-modifying.
 Without an {ignoreModifications} annotation on the field `System.out` (which we would typically add), printing to the console results in
 
+.Example {counter:example}, static side effects annotation
 [source,java]
 ----
 @StaticSideEffects
@@ -852,11 +864,11 @@ Item 2 implies that should `equals`, `hashCode` or `toString` make a modificatio
 We could conclude that these three methods cannot be modifying.
 
 Loosely speaking, objects of a value-based class can be identified by the values of their fields.
-Level 2 immutability (or deeper) is not requirement to be a value-based class.
-However, most level 2 immutable types will become value-classes.
+Level 2 immutability (or deeper) is not a requirement to be a value-based class.
+However, we expect many level 2 immutable types will become value-classes.
 Revisiting the example from the previous section, we can construct a counter-example:
 
-.Level 2 immutable type which is not value-based
+.Example {counter:example}, level 2 immutable type which is not value-based
 [source,java]
 ----
 @E2Container
@@ -890,6 +902,7 @@ The `equals` method violates item 2 of the value-class definition, maybe not to 
 
 When it is clear a method returns an immutable set, but the formal type is `java.util.Set`, the {e2immutable} annotation can 'travel':
 
+.Example {counter:example}, revisiting `SetBasedContainer6`
 [source,java]
 ----
 @E2Container
